style.css
@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@400;600&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100vh;
    font-family: 'Figtree', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color:  hsl(47, 88%, 63%);

}

.card{
    background-color: hsl(0, 0%, 100%);
    padding: 20px;
    border: 1px solid hsl(0, 0%, 7%);
    border-radius: 1rem;
    box-shadow: 8px 8px 2px hsl(0, 0%, 7%);
    cursor: pointer;
    transition: all 0.5s ease;
}

.card:hover{
    transform: translateY(-8px);
}

.card .card-prev-img{
    width: 100%;
    border-radius: 8px;
}

.status>span{
    display: inline-block;
    text-align: center;
    font-weight: 800;
    font-size: .6em;
    padding: 7px 12px;
    margin: 16px 0px 13px 0px;
    border-radius: 3px;
    background-color: hsl(47, 88%, 63%);

}

.blog-publish-date{
    color: hsl(0, 0%, 47%);
    font-weight: 800;
    margin-bottom: 14px;
    font-size: .9em;
}


.blog-title{
    font-size: 20px;
    color: hsl(0, 0%, 0%);
    font-weight: 800;
    font-size: larger;

}

.blog-title:active{
    color: hsl(47, 88%, 63%)
}

.blog-des{
    margin: 20px 0px;
    font-size: 1em;
    color: hsl(0, 0%, 47%);
}

.blog-des > ::selection{
    background-color: hsl(0, 0%, 60%);
    color: hsl(0, 0%, 12%);
}

.author-info{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-weight: 800;
    gap: 1rem;
}



.outro{
    position: absolute;
    bottom: 0;
    padding: 0px 0px 20px 0px;
    font-weight: 800;

}

.outro > a{
    text-decoration: none;
    color: hsl(0, 0%, 30%)
}

.outro > a:hover{
    color: hsl(0, 0%, 45%);
}


@media only screen and (max-width: 399px){

    .blog-des{
        font-size: .9em;
    }

    body{
        padding: 20px;
    }
    

    .outro{
        font-size: .9em;
    }
}


@media only screen and (max-width: 364px){
    
    .blog-title{
        font-size: 1em;
    }

    .blog-des{
        font-size: .8em;
    }
}


@media only screen and (max-width: 332px){
    
    .blog-title{
        font-size: 1em;
    }

    .blog-des{
        font-size: .6em;
    }

    .author-info{
        font-size: .6em;
    }

    .author-info img{
        width: 20%;
    }
}


@media only screen and (max-width: 269){


        .card{
            background-color: pink !important;
        }
    
    
}

